--- a/react-app/public/main.css
+++ b/react-app/public/main.css
@@ -76,6 +76,11 @@ header nav ul {
     align-items: center;
 }
 
+header nav a {
+    color: black;
+    text-decoration: none;
+}
+
 .button {
     font-size: 1.25rem;
     background-color: var(--MEDIUM);
@@ -104,7 +109,7 @@ form {
     background-color: var(--LIGHTEST);
 }
 
-input {
+form input {
     display: block;
     border-radius: 25px;
     margin: 5px auto 0 auto;
@@ -122,6 +127,7 @@ label {
 form a {
     font-size: 0.9rem;
     display: block;
+    width: 100%;
     margin-bottom: 10px;
 }
 
@@ -145,4 +151,31 @@ footer a {
 
 footer a:visited {
     color: var(--LINK-VISITED);
+}
+
+@media screen and (min-width: 500px) {
+
+    #outer {
+        width: 100%;
+        height: 30px;
+        max-width: 450px;
+        display: block;
+        margin: 0 auto;
+        padding-left: 25px;
+    }
+
+    #inner_input {
+        float: left;
+        max-width: 400px;
+        width: 100%;
+    }
+
+    #inner_eye {
+        float: right;
+        width: 25px;
+    }
+
+    #toggleVisible {
+        padding-top: 8px;
+    }
 }
